ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-route
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: api1.minhnhut.online
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: api-clusterip-srv-1
            port:
              number: 80
  - host: api2.minhnhut.online
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: api-clusterip-srv-2
            port:
              number: 80
