web-ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress-route
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: web1.minhnhut.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-clusterip-srv-1
            port:
              number: 80
  - host: web2.minhnhut.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-clusterip-srv-2
            port:
              number: 80
  - host: web1boss.minhnhut.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-clusterip-srv-1boss
            port:
              number: 80
